<resources>
    <string name="app_name">DomoticaApp</string>
    <string name="title_depto_detail">Departamento Detalle</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Domotica </string>
    <string name="signUp"><u>Regístrate</u></string>
    <string name="signIn">Ingresa</string>
    <string name="errorLogin">Usuario o contraseña incorrectos</string>
    <string name="footer">Touch Software</string>
    <string name="fullName">Nombre Completo</string>
    <string name="register">Registrarse</string>
    <string name="dni">DNI</string>
    <string name="upload">Subir</string>
    <string name="description">Descripción</string>
    <string name="account">Crear Cuenta</string>
    <string name="succesLogin">Luego de registrarte, serás redirigido a la pantalla de Login.</string>
    <string name="tudepto">Tu Domicilio</string>
    <string name="filter">Filtros</string>
    <string name="search">Buscar!</string>
    <string name="date"><u>Fecha</u></string>
    <string name="descriptionLabel"><u>Descripción</u></string>
    <string name="language">Manten presionado para seleccionar idioma!</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="italian">Italian</string>
    <string name="languageChange">Se cambió el lenguaje</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_edificio_list">Edificios</string>
    <string name="title_edificio_detail">Edificio Detail</string>
    <string name="find_sensor">Buscar sensor</string>
    <string name="reg_sensor">Registrar sensor</string>
    <string name="codigo">Codigo</string>
    <string name="umbral_value_min">Umbral min</string>
    <string name="umbral_value_max">Umbral max</string>
    <string name="sensor_delete">Borrar sensor</string>
    <string name="sensor_modify">Modificar sensor</string>
    <string name="edify_list">Listado Edificios</string>
    <string name="notifications">Notificaciones</string>
    <string name="crud_sensores">Crud sensores</string>
    <string name="id">Id</string>
    <string name="name">Entidad</string>
    <string name="lat">Latitud</string>
    <string name="longs">Longitud</string>
    <string name="dueño">Identificador propietario</string>
    <string name="to_nots">A nofiticaciones</string>
    <string name="close_session">Cerrar Sesion</string>
    <string name="sensor_list">Lista de Sensores</string>
    <string name="succefully">Registro exitoso</string>
    <string name="incomplete">Debe completar los campos</string>
    <string name="update">Registro actualiado</string>
    <string name="delete">Registro eliminado</string>
    <string name="null_ubic">Ubicacion nula</string>
    <string name="gps_desact">El gps se encuentra desactivado</string>
    <string name="atencion">Requiere atencion</string>
    <string name="activo">Sistema activo</string>
    <string name="desactivo">Sistema desactivado</string>
    <string name="alerta">Sistema en alerta</string>
    <string name="location">Locacion</string>
    <string name="sensores">Sensores</string>
    <string name="humedad">Humedad</string>
    <string name="temp">Temperatura</string>
    <string name="luz">Luz</string>
    <string name="carb">Carbono</string>
    <string name="val_act">Valores Actuales</string>
    <string name="noti_list">Lista De Notificaciones</string>
    <string name="serv_hab">Servicio Habilitado</string>
    <string name="serv_des">Servicio Deshabilitado</string>
    <string name="not">Notificacion</string>
    <string name="not_msg">Desea aprobar esta petición? se realizará la siguiente accion en la base de dato:</string>
    <string name="accept">Aceptar</string>
    <string name="rechaze">Rechazar</string>
    <string name="title_activity_detalle__sensores">Detalle_Sensores</string>
    <string name="title_activity_maps__nav_">Maps_Nav_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="welcome">Bienvenidos a domotics app</string>
    <string name="del">Borrar</string>
    <string name="guar">Guardar</string>
    <string name="ed">Editar</string>
    <string name="cuenta">Cuenta</string>
    <string name="hist_val">Valores historicos</string>
    <string name="sens_tip">Tipo de sensor</string>
    <string name="adm_sens">Administrar sensor</string>
    <string name="req">Requerido</string>
    <string name="re">Registrado exitosamente</string>
    <string name="cercanos">Sistemas cercanos</string>
    <string name="upd_ubi">Ubicacion actualizada</string>
    <string name="vig">Edificios vigentes</string>
    <string name="iden">Identificador</string>
    <string name="iden_usu">Identificador usuario asociado</string>


</resources>
