<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.domotica_app_v2.Sensor_Crud_Activity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="5dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location">

        <EditText
            android:id="@+id/txt_locacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lat"
        android:layout_marginTop="60dp">

        <EditText
            android:id="@+id/txt_lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longs"
        android:layout_marginTop="120dp">

        <EditText
            android:id="@+id/txt_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dueño"
        android:layout_marginTop="180dp">

        <EditText
            android:id="@+id/txt_userID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:paddingTop="15dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btn_camara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_marginTop="250dp"/>

        <ImageView
            android:id="@+id/preview"
            android:layout_width="250dp"
            android:layout_height="125dp"
            android:layout_below="@+id/btn_camara"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="270dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@android:drawable/screen_background_light_transparent" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/edify_list"
        android:textSize="20dp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/list_view_edificios"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>